# Sankofa

./: .gitignore  GOOGLE_CLOUD_USAGE.md  LICENSE  README.md  deploy.sh  deploy_windows.ps1  docker-compose.yml  download_sfx.py
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  firestore.indexes.json  pyproject.toml  requirements.txt  ruff.toml
backend/app/: config.py  main.py  rate_limiter.py
backend/app/data/: sample_narrative.json
backend/app/knowledge/: caribbean.py  east_africa.py  loader.py  south_asia.py  west_africa.py
backend/app/models/: schemas.py  session.py  user.py
backend/app/routes/: analytics.py  audio.py  auth.py  contribute.py  intake.py  live.py  narrative.py  share.py
backend/app/services/: adk_agent.py  adk_orchestrator.py  analytics.py  gemini_service.py  narrative_planner.py  research_service.py  trust_classifier.py  tts_service.py
backend/app/store/: __init__.py  firestore_client.py  firestore_store.py  user_store.py
backend/app/utils/: error_messages.py  sanitization.py
backend/docs/: DEPLOYMENT.md  GEMINI_USAGE.md
backend/scripts/: backfill_analytics_aggregates.py  backfill_contributions_aggregates.py  backfill_session_metadata.py  generate_sample_narrative.py
backend/tests/: __init__.py  conftest.py  test_critic.py  test_intake.py  test_sanitization.py  test_session.py
docs/: # Sankofa — Improvement Plan.md  ERROR_HANDLING.md
frontend/: .env.local.example  .env.production  Dockerfile  package-lock.json  package.json
scripts/: build_sample.py  capture_sample.py  generate_sample_tts.py  (+3 more)
(+40 files in other folders)
